<resources>
    <string name="app_name">JustTextEditor</string>
    <string name="action_save">Сохранить</string>
    <string name="action_open">Открыть</string>
    <string name="action_create">Создать</string>
    <string name="action_settings">Настройки</string>
    <string name="error_write_SD">Извините! Файл не сохранен: </string>
    <string name="success_write_SD">Файл записан на SD: </string>
    <string name="pref_mode">Режим октрытия</string>
    <string name="pref_summary_chb">Перейти к режиму чтения</string>
    <string name="pref_title_chb">Перейти</string>
    <string name="pref_color">Цвет</string>
    <string name="pref_color_black">Черный</string>
    <string name="pref_color_red">Красный</string>
    <string name="pref_color_green">Зеленый</string>
    <string name="pref_color_blue">Синий</string>
    <string name="pref_size">Размер</string>
    <string name="pref_style">Стиль</string>
    <string name="pref_style_regular">Нормальный</string>
    <string name="pref_style_bold">Полужирный</string>
    <string name="pref_style_italic">Курсив</string>
    <string name="pref_edit_dialog_title">Введите размер шрифта (от 10 до 32)</string>
    <string name="pref_edit_summary">Устанавливает новый размер шрифта</string>
    <string name="pref_edit_title">Размер шрифта</string>
    <string name="pref_style_list_dialog_title">Выберите стиль для шрифта</string>
    <string name="pref_style_list_summary">Устанавливает стиль для шрифта</string>
    <string name="pref_style_list_title">Стиль для шрифта</string>
    <string name="pref_color_list_dialog_title">Выберите цвет для шрифта</string>
    <string name="pref_color_list_summary">Устанавливает цвет для шрифта</string>
    <string name="pref_color_list_title">Цвет для шрифта</string>
    <string name="action_exit">Выйти</string>
    <string name="create_text_file">Введите имя файла</string>
    <string name="sd_not_available">"SD карта не доступна: "</string>
    <string name="dialog_message_registration">Этот аккаунт не зарегистрирован, вы хотите его зарегистрировать?</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_view_email">Email</string>
    <string name="edit_text_password">Password</string>
    <string name="btn_text_sign_in">Sign in or register</string>
    <string name="enter_correct">Введите корректный адресс и пароль</string>
    <string name="registration_dialog_title">Регистрация</string>
    <string name="incorrect_password">Неверный пароль</string>
    <string name="incorrect_email">Некорректно введен адресс почты</string>
    <string name="invalid_password">Пароль не соответствует требованиям</string>
    <string name="action_read">Чтение</string>
    <string name="action_send_email">Отправить сообщение</string>
    <string name="toast_create_text">Создан файл: </string>
    <string-array name="text_style">
        <item>Обычный</item>
        <item>Полужирный</item>
        <item>Курсив</item>
        <item>Полужирный+Курсив</item>
    </string-array>
    <string-array name="text_color">
        <item>Черный</item>
        <item>Красный</item>
        <item>Зеленый</item>
        <item>Синий</item>
    </string-array>
    <string-array name="file_names">
        <item>File 1</item>
        <item>File 2</item>
        <item>File 3</item>
        <item>File 5</item>
        <item>File 6</item>
        <item>File 7</item>
        <item>File 8</item>
        <item>File 9</item>
    </string-array>
</resources>
