<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<CheckBoxPreference
    android:key="@string/pref_openmode"
    android:summary="@string/pref_summary_chb"
    android:title="@string/pref_title_chb"/>
    <EditTextPreference
        android:defaultValue="14"
        android:dialogTitle="@string/pref_edit_dialog_title"
        android:title="@string/pref_edit_title"
        android:summary="@string/pref_edit_summary"
        android:key="@string/pref_size"/>
    <ListPreference
        android:key="@string/pref_style"
        android:title="@string/pref_style_list_title"
        android:dialogTitle="@string/pref_style_list_dialog_title"
        android:summary="@string/pref_style_list_summary"
        android:defaultValue="1"
        android:entries="@array/text_style"
        android:entryValues="@array/text_style"/>
    <ListPreference
        android:key="@string/pref_color"
        android:title="@string/pref_color_list_title"
        android:dialogTitle="@string/pref_color_list_dialog_title"
        android:summary="@string/pref_color_list_summary"
        android:entries="@array/text_color"
        android:entryValues="@array/text_color"/>
</PreferenceScreen>