<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<Button
    android:id="@+id/btnCreate"
    android:text="@string/action_create"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="135dp" />
    <Button
        android:id="@+id/btnOpen"
        android:text="@string/action_open"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnCreate"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnExit"
        android:text="@string/action_exit"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_below="@+id/btnOpen"
        android:layout_height="wrap_content" />
</RelativeLayout>