<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<AutoCompleteTextView
    android:id="@+id/autoTextView"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:hint="@string/text_view_email"
    android:inputType="textEmailAddress"
    />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_password"
        android:inputType="textPassword"
        />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btnSignIn"
        android:text="@string/btn_text_sign_in"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />
</LinearLayout>